<resources>
    <string name="app_name">Farmster</string>

    <string name="menu_coins">Coins:</string>
    <string name="menu_eggs">Eggs:</string>
    <string name="menu_monsters">Monsters:</string>

    <string name="shop_query">Would you like to buy an egg?</string>
    <string name="shop_confirm">Purchase for 10 coins</string>
    <string name="shop_error">You do not have enough coins</string>
    <string name="shop_farm">Return to farm</string>

    <string name="farm_query">What would you like to do?</string>
    <string name="farm_shop">Visit shop</string>
    <string name="farm_hatch">Hatch an egg</string>
    <string name="farm_check">Check on a monster</string>
    <string name="farm_hatch_error">You don\'t have any eggs to hatch</string>
</resources>
