<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/farm_coins_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_coins"
            android:padding="24dp"/>

        <TextView
            android:id="@+id/farm_eggs_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_eggs"
            android:padding="24dp"/>

        <TextView
            android:id="@+id/farm_monsters_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_monsters"
            android:padding="24dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/farm_query"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/farm_hatch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farm_hatch"
            />

        <Button
            android:id="@+id/farm_check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farm_check"
            />

        <Button
            android:id="@+id/farm_shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farm_shop"
            />

    </LinearLayout>


</LinearLayout>
