<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/shop_query"/>

    <Button
        android:id="@+id/shop_purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_confirm"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/shop_coins_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_coins"
            android:padding="24dp"/>

        <TextView
            android:id="@+id/shop_eggs_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_eggs"
            android:padding="24dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/shop_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>


</LinearLayout>
